[package]
name = "three_player_chess_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
glutin = "0.28.0"
gl = "0.14.0"
rand = "0.8.4"
rand_chacha = "0.3.1"
lazy_static = "1.0"
vecmath = "1.0.0"
nalgebra = "0.31.0"
bitvec = "1.0.0"
arrayvec = "0.7.2"
three_player_chess = {path = "../three_player_chess"}
three_player_chess_engine = {path = "../three_player_chess_engine"}
three_player_chess_paranoid_engine = {path = "../three_player_chess_paranoid_engine"}
three_player_chess_board_eval = {path = "../three_player_chess_board_eval"}

[dependencies.skia-safe]
version = "0.50.0"
features = ["gl", "x11"]
