[package]
name = "three_player_chess_frontend"
version = "0.1.0"
edition = "2021"

[lib]
name = "three_player_chess_frontend"

[dependencies]
nalgebra = "0.31.0"
rand = "0.8.4"
lazy_static = "1.0"
arrayvec = "0.7.2"
bitvec = "1.0.0"

three_player_chess = {path = "../three_player_chess"}
three_player_chess_board_eval = {path = "../three_player_chess_board_eval"}

[dependencies.skia-safe]
version = "0.57"
features = ["gl", "x11"]
