[package]
name = "three_player_chess_frontend_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
three_player_chess = {path = "../three_player_chess"}
three_player_chess_engine = {path = "../three_player_chess_engine"}
three_player_chess_paranoid_engine = {path = "../three_player_chess_paranoid_engine"}
three_player_chess_board_eval = {path = "../three_player_chess_board_eval"}
three_player_chess_frontend = {path = "../three_player_chess_frontend"}

gl = "0.14.0"
glutin = "0.28.0"
nalgebra = "0.31.0"
skia-safe = {version = "0.57.0", features=["gl", "x11"]}
